# sawyer_assembly

./: README.md  ee_config.json
devices_interface/: CMakeLists.txt  package.xml  setup.py
devices_interface/scripts/: ati_data_publisher.py  publish_ongoing_data.py
devices_interface/src/devices_interface/: ATI_Net.py  robot_ctl.py  robot_ctl_ik.py
devices_interface/src/devices_interface/positions/: sawyer_positions.csv
neural_networks/: CMakeLists.txt  package.xml  setup.py
neural_networks/src/neural_networks/: ART.py
neural_networks/src/neural_networks/train_files/: train_art_1.csv  train_art_2.csv  train_art_3.csv
neural_networks/src/neural_networks/train_files/ART_weight_files/: weights_a.csv  weights_ab.csv  weights_b.csv
neural_networks/src/neural_networks/train_files/saved_weights/set_01/: weights_a.csv  weights_ab.csv  weights_b.csv
neural_networks/src/neural_networks/train_files/saved_weights/set_02/: weights_a.csv  weights_ab.csv
neural_networks/src/neural_networks/train_files/train_art_01/: samples_29012026_18_13_34_X+.csv  samples_29012026_18_14_37_Y+.csv  samples_29012026_18_15_06_Y-.csv  samples_29012026_18_15_31_Z+.csv  samples_29012026_18_31_37_X+Y+.csv  samples_29012026_18_31_53_X+Y-.csv  samples_29012026_18_32_08_X-Y+.csv  samples_29012026_18_32_24_X-Y-.csv  samples_29012026_18_33_43_RotY+.csv  samples_29012026_18_33_55_RotY-.csv
neural_networks/src/neural_networks/train_files/train_art_02/: samples_29012026_18_13_11_None.csv  samples_29012026_18_14_07_X-.csv  samples_29012026_18_47_41_X+Y+.csv  samples_29012026_18_47_57_X+Y-.csv  samples_29012026_18_48_13_X-Y+.csv  samples_29012026_18_49_27_RotX+.csv
neural_networks/src/neural_networks/train_files/train_art_1/: samples_29012026_18_32_37_RotZ+.csv  samples_29012026_18_32_54_RotZ-.csv  samples_29012026_18_33_15_RotX+.csv  samples_29012026_18_33_31_RotX-.csv
neural_networks/src/neural_networks/train_files/train_art_2/: samples_29012026_18_15_58_Z-.csv  samples_29012026_18_48_29_X-Y-.csv  samples_29012026_18_48_44_RotZ+.csv  samples_29012026_18_49_04_RotZ-.csv  samples_29012026_18_49_43_RotX-.csv  samples_29012026_18_49_55_RotY+.csv  samples_29012026_18_50_07_RotY-.csv
neural_networks/src/neural_networks/train_files/train_art_3/: samples_03032026_17_25_51_None.csv  samples_03032026_17_26_04_X+.csv  samples_03032026_17_26_18_X-.csv  samples_03032026_17_26_33_Y+.csv  samples_03032026_17_26_48_Y-.csv  samples_03032026_17_27_03_Z+.csv  samples_03032026_17_27_17_Z-.csv  samples_03032026_17_27_34_X+Y+.csv  samples_03032026_17_27_51_X+Y-.csv  samples_03032026_17_28_08_X-Y+.csv  samples_03032026_17_28_26_X-Y-.csv  samples_03032026_17_28_41_RotZ+.csv  samples_03032026_17_29_00_RotZ-.csv  samples_03032026_17_29_24_RotX+.csv  samples_03032026_17_29_39_RotX-.csv  samples_03032026_17_29_55_RotY+.csv  samples_03032026_17_30_10_RotY-.csv
perception_modules/propioception/: CMakeLists.txt  package.xml
perception_modules/tactile/: CMakeLists.txt  package.xml
perception_modules/tactile/launch/: sawyer_art_map_predict.launch  sawyer_art_map_predict_rt.launch  sawyer_assembly_test.launch  sawyer_assembly_test_rt.launch  sawyer_obtain_ftdata_at_home.launch  sawyer_obtain_ftdata_movement_air_ati.launch  sawyer_obtain_ftdata_movement_ati.launch  sawyer_train_hole_entry.launch
perception_modules/tactile/scripts/: art_map_predict.py  art_map_predict_rt.py  artmap_assembly.py  artmap_assembly_rt.py  artmap_train_hole_entry.py  obtain_ftdata_at_home.py  obtain_ftdata_movement.py  obtain_ftdata_movement_air.py
perception_modules/visual/: CMakeLists.txt  package.xml
sawyer_sequences/: CMakeLists.txt  package.xml
sawyer_sequences/launch/: sawyer_home.launch
sawyer_sequences/scripts/: sawyer_home.py
sawyer_simulations/: CMakeLists.txt  package.xml
sawyer_simulations/launch/: sawyer_obtain_ftdata_mov_peg_hole.launch  sawyer_peg_in_hole.launch  sawyer_pick_and_place_demo.launch
sawyer_simulations/scripts/: ik_peg_in_hole_demo.py  obtain_ft_data_mov_peg_hole.py
