<?xml version="1.0"?>
<package format="2">
  <name>devices_interface</name>
  <version>0.0.0</version>
  <description>The devices_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="hector@todo.todo">hector</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/devices_interface</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  <!--   <depend>roscpp</depend> -->
  <!--   Note that this is equivalent to the following: -->
  <!--   <build_depend>roscpp</build_depend> -->
  <!--   <exec_depend>roscpp</exec_depend> -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use build_export_depend for packages you need in order to build against this package: -->
  <!--   <build_export_depend>message_generation</build_export_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use exec_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>bond</build_depend>
  <build_depend>bondcpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>cpp_common</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>gencpp</build_depend>
  <build_depend>geneus</build_depend>
  <build_depend>genlisp</build_depend>
  <build_depend>gennodejs</build_depend>
  <build_depend>genpy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>intera_interface</build_depend>
  <build_depend>intera_motion_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>map_msgs</build_depend>
  <build_depend>media_export</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>nodelet_topic_tools</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>python_qt_binding</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>ros_environment</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>rosbag_migration_rule</build_depend>
  <build_depend>rosbag_storage</build_depend>
  <build_depend>rosbuild</build_depend>
  <build_depend>rosclean</build_depend>
  <build_depend>rosconsole</build_depend>
  <build_depend>rosconsole_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roscpp_serialization</build_depend>
  <build_depend>roscpp_traits</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>roslz4</build_depend>
  <build_depend>rosmaster</build_depend>
  <build_depend>rosmsg</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rosout</build_depend>
  <build_depend>rospack</build_depend>
  <build_depend>rosparam</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy_message_converter</build_depend>
  <build_depend>rosservice</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rosunit</build_depend>
  <build_depend>roswtf</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sawyer_description</build_depend>
  <build_depend>sawyer_gazebo</build_depend>
  <build_depend>sawyer_hardware_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>smclib</build_depend>
  <build_depend>sns_ik_lib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_kdl</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <build_depend>tf2_py</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>xmlrpcpp</build_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>bond</build_export_depend>
  <build_export_depend>bondcpp</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>cpp_common</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>dynamic_reconfigure</build_export_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>
  <build_export_depend>gencpp</build_export_depend>
  <build_export_depend>geneus</build_export_depend>
  <build_export_depend>genlisp</build_export_depend>
  <build_export_depend>gennodejs</build_export_depend>
  <build_export_depend>genpy</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <build_export_depend>image_proc</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>intera_core_msgs</build_export_depend>
  <build_export_depend>intera_interface</build_export_depend>
  <build_export_depend>intera_motion_msgs</build_export_depend>
  <build_export_depend>interactive_markers</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>joint_state_publisher</build_export_depend>
  <build_export_depend>kdl_conversions</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>laser_geometry</build_export_depend>
  <build_export_depend>map_msgs</build_export_depend>
  <build_export_depend>media_export</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>nodelet_topic_tools</build_export_depend>
  <build_export_depend>orocos_kdl</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>python_qt_binding</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>resource_retriever</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>ros_environment</build_export_depend>
  <build_export_depend>rosbag</build_export_depend>
  <build_export_depend>rosbag_migration_rule</build_export_depend>
  <build_export_depend>rosbag_storage</build_export_depend>
  <build_export_depend>rosbuild</build_export_depend>
  <build_export_depend>rosclean</build_export_depend>
  <build_export_depend>rosconsole</build_export_depend>
  <build_export_depend>rosconsole_bridge</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roscpp_serialization</build_export_depend>
  <build_export_depend>roscpp_traits</build_export_depend>
  <build_export_depend>rosgraph</build_export_depend>
  <build_export_depend>rosgraph_msgs</build_export_depend>
  <build_export_depend>roslaunch</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>roslz4</build_export_depend>
  <build_export_depend>rosmaster</build_export_depend>
  <build_export_depend>rosmsg</build_export_depend>
  <build_export_depend>rosnode</build_export_depend>
  <build_export_depend>rosout</build_export_depend>
  <build_export_depend>rospack</build_export_depend>
  <build_export_depend>rosparam</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rospy_message_converter</build_export_depend>
  <build_export_depend>rosservice</build_export_depend>
  <build_export_depend>rostest</build_export_depend>
  <build_export_depend>rostime</build_export_depend>
  <build_export_depend>rostopic</build_export_depend>
  <build_export_depend>rosunit</build_export_depend>
  <build_export_depend>roswtf</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>sawyer_description</build_export_depend>
  <build_export_depend>sawyer_gazebo</build_export_depend>
  <build_export_depend>sawyer_hardware_interface</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>smclib</build_export_depend>
  <build_export_depend>sns_ik_lib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_kdl</build_export_depend>
  <build_export_depend>tf2_msgs</build_export_depend>
  <build_export_depend>tf2_py</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>tf_conversions</build_export_depend>
  <build_export_depend>topic_tools</build_export_depend>
  <build_export_depend>trajectory_msgs</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <build_export_depend>xmlrpcpp</build_export_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>bond</exec_depend>
  <exec_depend>bondcpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>cpp_common</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>gencpp</exec_depend>
  <exec_depend>geneus</exec_depend>
  <exec_depend>genlisp</exec_depend>
  <exec_depend>gennodejs</exec_depend>
  <exec_depend>genpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>intera_core_msgs</exec_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>intera_motion_msgs</exec_depend>
  <exec_depend>interactive_markers</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>map_msgs</exec_depend>
  <exec_depend>media_export</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>nodelet_topic_tools</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>python_qt_binding</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_environment</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>rosbag_migration_rule</exec_depend>
  <exec_depend>rosbag_storage</exec_depend>
  <exec_depend>rosbuild</exec_depend>
  <exec_depend>rosclean</exec_depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>rosconsole_bridge</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>
  <exec_depend>roscpp_traits</exec_depend>
  <exec_depend>rosgraph</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>roslz4</exec_depend>
  <exec_depend>rosmaster</exec_depend>
  <exec_depend>rosmsg</exec_depend>
  <exec_depend>rosnode</exec_depend>
  <exec_depend>rosout</exec_depend>
  <exec_depend>rospack</exec_depend>
  <exec_depend>rosparam</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <exec_depend>rosservice</exec_depend>
  <exec_depend>rostest</exec_depend>
  <exec_depend>rostime</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>rosunit</exec_depend>
  <exec_depend>roswtf</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>sawyer_description</exec_depend>
  <exec_depend>sawyer_gazebo</exec_depend>
  <exec_depend>sawyer_hardware_interface</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>smclib</exec_depend>
  <exec_depend>sns_ik_lib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_kdl</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>xmlrpcpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
